# rakutenranktool

./: .env.example  .gitignore  CLAUDE.md
collector/: pyproject.toml
collector/src/: config.py  db.py  main.py  models.py  scraper.py
collector/tests/: test_db.py  test_scraper.py
collector/tests/fixtures/: search_initial_state.html  search_json_ld.html
dashboard/: package-lock.json  package.json
docs/: spec.md  supabase-cli-setup.md
plans/: plan.md
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql
